MyDemoOrg/force-app/main/default/objects/signature__Template__c/signature__Template__c.object-meta.xml
<CustomObject>
    <description>Simple Signature PDF Signature Template Maps</description>
    <label>ß PDF Template</label>
    <nameField>
        <label>PDF Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ß PDF Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>