MyDemoOrg/force-app/main/default/objects/signature__Template__c/fields/signature__MarginLeft__c.field-meta.xml
<CustomField>
    <fullName>signature__MarginLeft__c</fullName>
    <label>Margin (Left)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>