MyDemoOrg/force-app/main/default/objects/signature__Template__c/fields/signature__MarginRight__c.field-meta.xml
<CustomField>
    <fullName>signature__MarginRight__c</fullName>
    <label>Margin (Right)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>